--- a/CSS/style.css
+++ b/CSS/style.css
@@ -137,3 +137,73 @@ body{
     line-height: 9vw;
 }
 
+.product-des{
+    margin: 4vw 0;
+    width: 90%;
+    font-size: 1.2vw;
+    line-height: 2vw;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.buy-btn{
+    text-decoration: none;
+    color: #000;
+    text-transform: capitalize;
+    font-size: 1.2vw;
+}
+
+.nxt-btn{
+    border: none;
+    background: none;
+    display: flex;
+    margin-left: auto;
+    margin-top: -1.2vw;
+    margin-right: 1vw;
+    cursor: pointer;
+    justify-content: center;
+    user-select: none;
+}
+
+.nxt-btn img{
+    width: 60%;
+}
+
+.product-img-container{
+    width: 40%;
+    height: 40vw;
+    position: absolute;
+    overflow: hidden;
+}
+
+.product-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slide::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    animation: slide-left 1s linear 1;
+}
+
+@keyframes slide-left{
+    to{
+        left: 100%;
+    }
+}
+
+.fade{
+    pointer-events: none;
+    animation: fade-in 1s forwards 1;
+}
+
+@keyframes fade{
+    0%, 100%{ opacity: 1; }
+    45%, 60%{ opacity: 0; }
+}
