--- a/CSS/style.css
+++ b/CSS/style.css
@@ -168,18 +168,25 @@ body{
     width: 60%;
 }
 
-.product-img-container{
-    width: 40%;
-    height: 40vw;
-    position: absolute;
-    overflow: hidden;
+.product-img-container {
+    width: 50%;
+    height: auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    margin: auto;
 }
 
-.product-img{
+.product-img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: auto;
+    object-fit: contain;
+    position: relative;
+    z-index: 2;
 }
+
 
 .slide::before{
     content: '';
